# arcanum

./: .clabot  .gitignore  .luaurc  AGENTS.md  CLA.md  CONTRIBUTING.md  Cargo.toml  README.md  agents.md  deno.json  main.ts  tsconfig.json
.github/workflows/: ci.yml  fmt.yml
.opencode/plans/: kv-checkpoints.md
cmd/: arcanum_tui.ts
definitions/: arcanum.d.luau
docs/: api.md  app_config_reference.md  capabilities.md  event_loop.md  events.md  flows.md  footguns.md  identity.md  init.md  making_apps.md  mental_model.md  network.md  optimization.md  principles.md  runner.md  runtime_extensions.md  scheduler_alignment.md  setup.md  side_effects.md  time_travel.md
docs/examples/: birdmaker.ts  board.lua  board.ts  counter-2.ts  counter.ts  fortune.lua  fortune.ts  hello-world.ts  infoboard.lua  infoboard.ts
docs/examples/cheese/: main.lua
lib/: dag.ts  dag_sqlite.ts  dag_sqlite_test.ts  db.ts  db_adapter.ts  env.types.ts  net.ts  net.types.ts  runext.types.ts  types.ts
lib/ipc/: api.ts  host.ts  mod.ts  types.ts  worker.ts
lib/runner/: glue.ts
migrations/: 001_create_tree_tables.ts
src/: api.ts  config.rs  conversions.rs  db.ts  executor.rs  executor_test.rs  in_memory.rs  lib.rs  log.rs  main.rs  main.ts  manager.rs  mgmt.rs  runner.ts  scheduler.rs  shell.rs  state.rs  store.rs  types.rs  types.ts  wrapper.lua
src/js/: executor.js
src/naive/: packages.ts
src/ops/: mod.rs
src/proc/: http.rs  http_server.rs
src/tests/: integration.rs
svc/: events.ts  net.d.ts  net.ts  packages.ts  reference_store.ts  runner.ts  scheduler.ts  store.ts
test/: dag_sqlite_test.ts  events_test.ts  invariants_test.ts  ipc_test.ts  property_test.ts  runner_test.ts  scheduler_test.ts  store_test.ts
test/workers/: bidirectional.ts  callback.ts  caller.ts  clone.ts  concurrent.ts  exister.ts  failer.ts  hanger.ts  hello.ts  reader.ts  selfcall.ts  simple.ts  slow_reader.ts  timeout.ts  writer.ts
tests/: integration.rs
