[package]
name = "workspace"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "workspace"
path = "src/main.rs"

[[test]]
name = "integration"
path = "src/tests/integration.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
rusqlite = "0.32"
deno_core = "0.398"
bytes = "1.11.1"
anyhow = "1.0.102"
sha2 = "0.11.0"
tar = "0.4.45"
flate2 = "1.1.9"
diesel = { version = "2.1", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
