[package]
name = "arcanum"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "arcanum"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
rusqlite = "0.32"
bytes = "1.11.1"
anyhow = "1.0.102"
sha2 = "0.11.0"
tar = "0.4.45"
flate2 = "1.1.9"
diesel = { version = "2.1", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
uuid = { version = "1", features = ["v4"] }
mlua = { version = "0.11.6", features = ["luau", "serde", "anyhow", "async", "send", "error-send", "macros", "luau-jit"] }
async-stream = "0.3.6"
futures = "0.3.32"
tokio-stream = "0.1.18"
rmp-serde = "1.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
